Update 02-04-Critical Points and Optimization.ipynb
Factor the x terms back again

𝑥2⎯4𝑥=4
 
Complete the square, step 1

𝑥2⎯4𝑥+4=0; (not x2 -4x -4)

--- a/Python/Module02/02-04-Critical Points and Optimization.ipynb
+++ b/Python/Module02/02-04-Critical Points and Optimization.ipynb
@@ -602,7 +602,7 @@
     "\n",
     "Complete the square, step 1\n",
     "\n",
-    "\\begin{equation}x^{2} - 4x - 4 = 0 \\end{equation}\n",
+    "\\begin{equation}x^{2} - 4x + 4 = 0 \\end{equation}\n",
     "\n",
     "Complete the square, step 2\n",
     "\n",
